<resources>
    <string name="app_name">More</string>
    <string name="app_mangaeActivity">Operation Management</string>
    <string name="app_maintanceActivity">Settings Maintenance</string>
    <string name="app_alarmActivity">Alarm Settings</string>
    <string name="app_systemActivity">System Settings</string>
    <string name="app_paramActivity">Parameter</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="txt_emty">Null</string>
    <string name="car_stander_default">Default</string>
    <string name="car_stander_save">Save</string>
    <string name="mangae_connect">Connected</string>
    <string name="mangae_unconnect">Unconnected</string>
    <string name="mangae_normal">Normal</string>
    <string name="mangae_unnormal">UnNormal</string>
    <string name="seeting_miao">s</string>
    <string name="more_title">More</string>
    <string name="more_system_setting">System</string>
    <string name="more_communtion_setting">Device</string>
    <string name="more_set_setting">Operation</string>
    <string name="more_device_miantain">Alarm</string>
    <string name="more_system_voice">System Volume</string>
    <string name="more_system_light">Display Brightness</string>
    <string name="more_system_wifi_connect">Wifi Connection</string>
    <string name="more_system_host_setting">Hotspot Settings</string>
    <string name="more_system_time_setting">Time Settings</string>
    <string name="more_system_reset">System Reset</string>
    <string name="more_system_voice_text">Volume</string>
    <string name="more_system_touch_text">Touch Sound</string>
    <string name="more_system_light_text">Brightness</string>
    <string name="more_system_light_swtch">Automatic Adjustment</string>
    <string name="more_system_wifi_net">Network Selection</string>
    <string name="more_system_host_switch">Hot Switch</string>
    <string name="more_system_host_name">Hotspot Name</string>
    <string name="more_system_host_pws">Hot Password</string>
    <string name="more_system_host_number">Connections Number</string>
    <string name="more_system_time_dayformat">Date Format</string>
    <string name="more_system_time_timeformat">Time Format</string>
    <string name="more_system_time_timezone">Time zone selection</string>
    <string name="more_system_time_chektime">Correct Time</string>
    <string name="more_system_time_settime">Change Time</string>
    <string name="more_system_time_sateChektime">Satellite Correct</string>
    <string name="more_system_time_ntpChektime">NTP Correct</string>
    <string name="more_system_reset_date">Personal Data</string>
    <string name="more_system_reset_restore_factory">Reset</string>
    <string name="more_system_reset_restore_factoryItem">Clear all the data on the terminal</string>
    <string name="more_system_reset_system_restart">System Restart</string>
    <string name="more_system_reset_system_restartItem">Software reboot, some peripherals uninterruptible power supply!</string>
    <string name="more_alarm_speed">Speed Record</string>
    <string name="more_alarm_deverce">Equipment</string>
    <string name="more_alarm_other">Other</string>
    <string name="more_alarm_speed_text1">"alarm number:  "</string>
    <string name="more_alarm_speed_text2">"warning number:  "</string>
    <string name="more_alarm_speed_text3">"Alarm number:  "</string>
    <string name="more_alarm_speed_startime">"Starting Time："</string>
    <string name="more_alarm_speed_continuedtime">"Duration :"</string>
    <string name="more_alarm_speed_endtime">"End Time :"</string>
    <string name="maintance_version">Version</string>
    <string name="maintance_inpecte">State</string>
    <string name="maintance_data">Data</string>
    <string name="maintance_gps">GPS</string>
    <string name="maintance_net">Internet</string>
    <string name="maintance_inpecte_content">Content</string>
    <string name="maintance_inpecte_state">Status</string>
    <string name="maintance_inpecte_dvr">Camera</string>
    <string name="maintance_inpecte_taximeter">Meter</string>
    <string name="maintance_inpecte_carscreen">Empty Screen</string>
    <string name="maintance_inpecte_gps">GPS Antenna</string>
    <string name="maintance_inpecte_net">Communication Module</string>
    <string name="maintance_inpecte_power">Powered</string>
    <string name="maintance_inpecte_power_fuiler">Undervoltage</string>
    <string name="maintance_inpecte_rentserver">Rental Service</string>
    <string name="maintance_inpecte_vedioserver">Video Service</string>
    <string name="maintance_version_model">Module</string>
    <string name="maintance_version_version">Version</string>
    <string name="maintance_version_update">Upgrade</string>
    <string name="maintance_version_app">Application</string>
    <string name="maintance_version_os">System</string>
    <string name="maintance_version_mcu">Microcontroller</string>
    <string name="maintance_version_dvr">Camera</string>
    <string name="maintance_version_carsrceen">Empty Screen</string>
    <string name="maintance_version_map">Map</string>
    <string name="maintance_version_gaodemap">Gaode Map</string>
    <string name="maintance_data_text">Operating</string>
    <string name="maintance_data_driver_msg">Driver Information</string>
    <string name="maintance_data_import">Parameter Import</string>
    <string name="maintance_data_export">Parameters Export</string>
    <string name="maintance_data_recovery">Data Recovery</string>
    <string name="maintance_data_cleardb">Empty the database</string>
    <string name="maintance_data_log_export">Log Export</string>
    <string name="maintance_data_opreta_data">Operating Data Export</string>
    <string name="maintance_data_sign">Sign out And Sign Export</string>
    <string name="maintance_data_alarm">Alarm Data</string>
    <string name="maintance_data_text_export">Export</string>
    <string name="maintance_data_text_clear">Emptied</string>
    <string name="maintance_data_redefault">Reset</string>
    <string name="maintance_data_text_import">Import</string>
    <string name="maintance_net_sim">SIM State</string>
    <string name="maintance_net_facilitator">Service Provider</string>
    <string name="maintance_net_signal">Signal Strength</string>
    <string name="maintance_net_roam">Whether Roaming</string>
    <string name="maintance_net_type">Network Type</string>
    <string name="maintance_net_state">Network Status</string>
    <string name="maintance_net_ip">IP Address</string>
    <string name="net_txt_unknowstate">Unknown</string>
    <string name="net_txt_nocardstate">Not Inserted Card</string>
    <string name="net_txt_lockedstate">Locking</string>
    <string name="net_txt_readystate">Ready </string>
    <string name="net_txt_cmobile">CMCC</string>
    <string name="net_txt_cunicom">CUCC</string>
    <string name="net_txt_ctelecommunication">CTCC</string>
    <string name="net_txt_netok">Available</string>
    <string name="net_txt_netno">Unavailable</string>
    <string name="net_txt_netchek">Checking...</string>
    <string name="maintance_location_state">Locate State:</string>
    <string name="maintance_location_Modestate">Mode State:</string>
    <string name="maintance_location_startState">Star State:</string>
    <string name="maintance_location_longitude">Longitude:</string>
    <string name="maintance_location_latitude">Latitude:</string>
    <string name="maintance_location_sateNumber">Stars Number:</string>
    <string name="maintance_location_gpsNumber">Use Stars Number:</string>
    <string name="maintance_location_gps">GPS:</string>
    <string name="maintance_location_beidou">BD:</string>
    <string name="maintance_location_ok">Already Positioned</string>
    <string name="maintance_location_no">Not Located</string>
    <string name="mangae_setting_base">Basic</string>
    <string name="mangae_setting_parameter">Platform</string>
    <string name="mangae_setting_dial">Dialing</string>
    <string name="mangae_setting_serialPort">Serial Port</string>
    <string name="mangae_setting_sensor">Sensing</string>
    <string name="mangae_setting_power">Power</string>
    <string name="mangae_setting_speed">Speed</string>
    <string name="mangae_setting_base_carNumber">Car Number</string>
    <string name="mangae_setting_base_terminalNumber">Terminal Number</string>
    <string name="mangae_setting_base_canmpertName">Company Name</string>
    <string name="mangae_setting_base_dvrNumber">Video Host Number</string>
    <string name="mangae_setting_base_time">Operation Timed Out</string>
    <string name="mangae_setting_base_printer">Printer Sensitivity</string>
    <string name="mangae_setting_base_latch">Latch</string>
    <string name="mangae_setting_base_pre_time">Prerecorded</string>
    <string name="mangae_setting_base_delay_time">Delay</string>
    <string name="mangae_setting_base_zhuce">Registered</string>
    <string name="mangae_setting_base_minute">min</string>
    <string name="mangae_btn_defult">Default</string>
    <string name="mangae_btn_save">Save</string>
    <string name="mangae_parameter_domain">Domain Name</string>
    <string name="mangae_parameter_btnConnect">Connect</string>
    <string name="mangae_parameter_btndisConnect">Disconnect</string>
    <string name="mangae_parameter_modelText0">Null</string>
    <string name="mangae_parameter_text0">Select</string>
    <string name="mangae_parameter_text1">Platform</string>
    <string name="mangae_parameter_text2">Parameter</string>
    <string name="mangae_parameter_text3">State</string>
    <string name="mangae_parameter_rentalServer">Address</string>
    <string name="mangae_parameter_rentalServerPort">Port</string>
    <string name="mangae_parameter_Spare_rentalServer">Spare Address</string>
    <string name="mangae_parameter_Spare_rentalServerPort">Spare Port</string>
    <string name="mangae_parameter_rentalServer2">Server Address 2</string>
    <string name="mangae_parameter_rentalServerPort2">Server Port 2</string>
    <string name="mangae_parameter_Spare_rentalServer2">Spare Address 2</string>
    <string name="mangae_parameter_Spare_rentalServerPort2">Spare Port 2</string>
    <string name="mangae_speed_km">Speed Unit</string>
    <string name="mangae_speed_alarmNumber">Speed Alarm Value</string>
    <string name="mangae_speed_time">Speeding Alarm</string>
    <string name="mangae_speed_pre_alarmNumber">Pre-speed value</string>
    <string name="mangae_speed_pre_time">Pre-speed Duration</string>
    <string name="mangae_speed_source">Speed Source</string>
    <string name="mangae_dial_baud_rate">Baud Rate</string>
    <string name="mangae_dial_peripheral">Peripherals</string>
    <string name="mangae_power_acc">ACC Function Mode</string>
    <string name="mangae_power_bootmodel">Boot Mode</string>
    <string name="mangae_power_noboottime">Shutdown Delay</string>
    <string name="mangae_power_lowpower">Low Voltage</string>
    <string name="mangae_power_acc_battery_low">Battery Low-Voltage</string>
    <string name="mangae_power_recovery_power">Restore Voltage</string>
    <string name="mangae_power_battery_alarm">Undervoltage Alarm</string>
    <string name="mangae_sensor_in_text">Enter</string>
    <string name="mangae_sensor_out_text">Output</string>
    <string name="mangae_sensor_in_sensore">Sensor</string>
    <string name="mangae_sensor_in_enable">Enable</string>
    <string name="mangae_sensor_in_purpose">Purpose</string>
    <string name="mangae_sensor_in_level">Trigger</string>
    <string name="mangae_sensor_in_dvr">Video</string>
    <string name="title_activity_param">ParamActivity</string>
    <string name="settings_toast_ipformat">IP format is wrong:</string>
    <string name="settings_toast_portformat">The input content is empty or the format is mistaken!</string>
    <string name="heartbeat">Heartbeat Interval</string>
    <string name="tcpresponsetimeout">TCP Response Timeout</string>
</resources>