<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="22dp"
            android:paddingTop="13dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="75dp">

                <TextView
                    style="@style/SecondaryTile"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/maintance_inpecte_content" />

                <TextView
                    style="@style/SecondaryTile"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/maintance_data_text" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@mipmap/viewline"></View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="60dp">

                <TextView
                    style="@style/SecondaryTile"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/maintance_data_driver_msg" />

                <Button
                    android:id="@+id/btn_driver_msg"
                    style="@style/SecondaryTile"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/zhuce_selector"
                    android:text="@string/maintance_data_text_import" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@mipmap/viewline"></View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="60dp">

                <TextView
                    style="@style/SecondaryTile"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/maintance_data_import" />

                <Button
                    android:id="@+id/btn_data_import"
                    style="@style/SecondaryTile"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/zhuce_selector"
                    android:text="@string/maintance_data_text_import" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@mipmap/viewline"></View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="60dp">

                <TextView
                    style="@style/SecondaryTile"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/maintance_data_export" />

                <Button
                    android:id="@+id/btn_data_export"
                    style="@style/SecondaryTile"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/zhuce_selector"
                    android:text="@string/maintance_data_text_export" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@mipmap/viewline"></View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="60dp">

                <TextView
                    style="@style/SecondaryTile"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/maintance_data_recovery" />

                <Button
                    android:id="@+id/btn_data_recovery"
                    style="@style/SecondaryTile"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/zhuce_selector"
                    android:text="@string/maintance_data_redefault" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@mipmap/viewline"></View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="60dp">

                <TextView
                    style="@style/SecondaryTile"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/maintance_data_cleardb" />

                <Button
                    android:id="@+id/btn_data_cleardb"
                    style="@style/SecondaryTile"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/zhuce_selector"
                    android:text="@string/maintance_data_text_clear" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@mipmap/viewline"></View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="60dp">

                <TextView
                    style="@style/SecondaryTile"

                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/maintance_data_log_export" />

                <Button
                    android:id="@+id/btn_data_log_export"
                    style="@style/SecondaryTile"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/zhuce_selector"
                    android:text="@string/maintance_data_text_export" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@mipmap/viewline"></View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="60dp">

                <TextView
                    style="@style/SecondaryTile"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/maintance_data_opreta_data" />

                <Button
                    android:id="@+id/btn_revenue_export"
                    style="@style/SecondaryTile"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/zhuce_selector"
                    android:text="@string/maintance_data_text_export" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@mipmap/viewline"></View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="60dp">

                <TextView
                    style="@style/SecondaryTile"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/maintance_data_sign" />

                <Button
                    android:id="@+id/btn_signOrSignOut_export"
                    style="@style/SecondaryTile"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/zhuce_selector"
                    android:text="@string/maintance_data_text_export" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@mipmap/viewline"></View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="60dp">

                <TextView
                    style="@style/SecondaryTile"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/maintance_data_alarm"
                    android:textColor="#f1f1f1"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btn_alarm_export"
                    style="@style/SecondaryTile"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/zhuce_selector"
                    android:text="@string/maintance_data_text_export" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@mipmap/viewline"></View>


        </LinearLayout>
    </ScrollView>

</LinearLayout>