<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main_background"
    tools:context="com.uninew.maintanence.view.MaintanceActivity">
    <RelativeLayout
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="47dp">

        <RadioGroup
            android:id="@+id/more_maintance_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/more_radiobutton_deviceInspect"
                style="@style/Menu_common_radiobutton"
                android:button="@null"
                android:checked="true"
                android:drawableLeft="@mipmap/deviceinspect"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/maintance_inpecte"/>

            <RadioButton
                android:id="@+id/more_radiobutton_version"
                style="@style/Menu_common_radiobutton"
                android:button="@null"
                android:drawableLeft="@mipmap/maintance_version"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/maintance_version"/>

            <RadioButton
                android:id="@+id/more_radiobutton_data"
                style="@style/Menu_common_radiobutton"
                android:button="@null"
                android:drawableLeft="@mipmap/maintance_data"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/maintance_data"/>
            <RadioButton
                android:id="@+id/more_radiobutton_gps"
                style="@style/Menu_common_radiobutton"
                android:button="@null"
                android:drawableLeft="@mipmap/maintance_gps"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/maintance_gps"/>
            <RadioButton
                android:id="@+id/more_radiobutton_net"
                style="@style/Menu_common_radiobutton"
                android:button="@null"
                android:drawableLeft="@mipmap/maintance_net"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/maintance_net"/>


        </RadioGroup>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/im_framelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>
</LinearLayout>
